@@ -1,3 +1,9 @@
+2001-01-23 Paolo Nenzi <p.nenzi@ieee.org>
+
+	* noisean.c: patched the code with the new one
+	in the bsim4.1.0 distribution. The new noisean.c
+	put some code between #ifdef INT_NOISE. 
+
 2000-01-21 Paolo Nenzi <p.nenzi@ieee.org>
 
 	* cktsgen.c: corrected a bug that caused segfault on sensitivity
